--- a/examples/hazard-button/index.html
+++ b/examples/hazard-button/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
     <title>Hazard Button</title>
+    <link rel="stylesheet" href="/DNA_common/css/style.css" />
     <link rel="stylesheet" href="/__build__/styles.css" />
   </head>
   <body>
