Fix style overwrite

--- a/examples/slider/index.html
+++ b/examples/slider/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
     <title>Slider</title>
     <link rel="stylesheet" href="/DNA_common/css/style.css" />
-    <link rel="stylesheet" href="/__build__/styles.css" />
+    <link rel="stylesheet" href="/__build__/slider.css" />
   </head>
   <body>
     <div id="app"></div>
